[package]
name = "responsive-tester"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "responsive_tester_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
# Serves the built frontend from http://localhost:<port> instead of the
# default tauri:// scheme. That makes the app shell same-protocol as the
# http://localhost:8080 sites we point it at, so WKWebView stops blocking
# them as mixed content. This is the Tauri-sanctioned path for this need.
tauri-plugin-localhost = "2"
# Used to derive a free localhost port at app start.
portpicker = "0.1"
# Save / open dialogs for QA audit exports.
tauri-plugin-dialog = "2"

